# trade-bots-farm

./: .gitignore  .gitmodules  README.md  SEAWEEDFS-S3CMD-ACCESS.md  Trade bots concept.drawio  pyproject.toml  test-seaweedfs-s3cmd.sh
common/: pyproject.toml
common/src/: common_tools.py  dag_tools.py  metrics_base.py  s3_tools.py
common/src/trade_bots_farm_common/: dag_tools.py  test_s3_tools.py
common/tests/: test_s3_tools.py
connectors/batch/s3-external/: pyproject.toml
connectors/batch/s3-external/src/: S3ExternalBatchConnectorMetrics.py  connector_batch_s3_external_app.py  connector_batch_s3_external_dag.py  connector_batch_s3_external_metrics.py  history_s3_downloader.py  metrics.py
connectors/stream/alor-ws/: pyproject.toml
connectors/stream/alor-ws/s3-sinks/: s3-sink-raw.alor.MOEX.TQBR.SBER.bid_ask.yaml
connectors/stream/alor-ws/src/: alor_kafka_raw_producer.py  alor_ws_client.py  alor_ws_request.py  connector_stream_alor_app.py  connector_stream_alor_dag.py  connector_stream_alor_metrics.py  test_alor_kafka_raw_producer.py  test_alor_ws_request.py
connectors/stream/alor-ws/src/trade_bots_farm_connector_stream_alor/: alor_kafka_raw_producer.py  alor_ws_client.py  alor_ws_request.py  connector_stream_alor_app.py  connector_stream_alor_dag.py  connector_stream_alor_metrics.py  test_alor_kafka_raw_producer.py  test_alor_ws_client.py
connectors/stream/alor-ws/tests/: test_alor_ws_client.py  test_alor_ws_request.py
connectors/stream/htx-ws/: pyproject.toml
connectors/stream/htx-ws/src/: HtxStreamConnectorMetrics.py  Metrics.py  connector_stream_htx_app.py  connector_stream_htx_dag.py  connector_stream_htx_metrics.py  htx_web_socket_client.py  htx_websocket_client.py  kafka_raw_producer.py  metrics.py
grafana/: connectors-dashboard.json  preprocessors-dashboard.json
k8s/: common-lib.sh  deploy-dags.sh  infra-deploy.sh  minikube-start.sh
k8s/airflow/: values.yaml
k8s/grafana/: values.yaml
k8s/kafka/: values.yaml
k8s/kafka-connect/: Dockerfile  alor-s3-sink.yaml  kafka-connect-s3.yaml  kafka-connect.yaml  s3-sink-raw.alor.MOEX.TQBR.SBER.level2.json  s3-sinks.yaml
k8s/kafka-ui/: values.yaml
k8s/minikube-registry/: create-registry-secret.sh  insecure-registry-config.yaml  registry-config.yaml  registry-deployment.yaml  registry-pv.yaml  registry-pvc.yaml
k8s/minio/: values.yaml
k8s/mlflow/: values.yaml
k8s/prometheus/: prometheus-pushgateway.values.yaml  values.yaml
k8s/pvc/: airflow-dags.yaml  environment.yaml  minio.yaml  wheels.yaml
k8s/registry/: values.yaml
k8s/terraform/: SEAWEEDFS-ACCESS-SOLUTIONS.md  fix-seaweedfs-dns.sh  main.tf  outputs.tf  postgresql-patch.yaml  terraform.tfvars  test.sh  variables.tf
k8s/terraform/environments/: dev.tfvars
k8s/terraform/modules/airflow/: main.tf  outputs.tf  values.yaml  variables.tf
k8s/terraform/modules/grafana/: main.tf  outputs.tf  values.yaml  variables.tf
k8s/terraform/modules/kafka/: main.tf  outputs.tf  values.yaml  variables.tf
k8s/terraform/modules/kafka-connect/: alor-s3-sink.yaml  kafka-connect-s3.yaml  main.tf  outputs.tf  variables.tf
k8s/terraform/modules/kafka-ui/: main.tf  outputs.tf  values.yaml  variables.tf
k8s/terraform/modules/minio/: main.tf  outputs.tf  values.yaml  variables.tf
k8s/terraform/modules/mlflow/: main.tf  outputs.tf  values.yaml  variables.tf
k8s/terraform/modules/prometheus/: main.tf  outputs.tf  values.yaml  (+2 more)
k8s/terraform/seaweedfs/: values.yaml
processes/batch/full/: pyproject.toml
processes/batch/full/src/: process_batch_full_dag.py
processes/batch/raw-to-preproc/: pyproject.toml
processes/batch/raw-to-preproc/src/: candles_preproc.py  level2_pytrade2_preproc.py  process_batch_raw_to_preproc_app.py  process_batch_raw_to_preproc_dag.py  process_batch_raw_to_preproc_metrics.py  test_candles_preproc.py
processes/batch/staging/alor/: pyproject.toml
processes/batch/staging/alor/src/: candles_staging.py  level2_staging.py  process_batch_staging_alor_app.py  process_batch_staging_alor_dag.py  process_batch_staging_alor_metrics.py  test_candles_staging.py  test_candles_staging_alor.py
processes/batch/staging/s3-external/: pyproject.toml
processes/batch/staging/s3-external/src/: candles_pytrade2_staging.py  level2_pytrade2_staging.py  process_batch_pytrade2_staging_app.py  process_batch_pytrade2_staging_dag.py
processes/common/: pyproject.toml
processes/common/src/: run_all_dag.py  stop_all_dag.py
processes/run_all/: pyproject.toml
processes/stream/features/: pyproject.toml
processes/stream/features/config/: logging.yaml
processes/stream/features/src/: features_app.py  features_calc.py  features_kafka_producer.py  features_metrics.py  multi_indi_features_app.py  multi_indi_features_calc.py  multi_indi_features_dag.py  stream_features_app.py  test_multi_indi_features_calc.py
processes/stream/features/src/feed/: kafka_feed.py  kafka_with_s3_feed.py  s3_feed.py  test_kafka_with_s3_feed.py
processes/stream/full/: pyproject.toml
processes/stream/raw-to-preproc/: pyproject.toml
processes/stream/raw-to-preproc/htx/: pyproject.toml
processes/stream/raw-to-preproc/htx/src/: bid_ask_preproc.py  process_stream_raw_to_preproc_dag.py  process_stream_raw_to_preproc_metrics.py  test_level2_preproc.py  test_preproc_base.py
processes/stream/raw-to-preproc/src/: bid_ask_preproc.py  candles_preproc.py  level2_preproc.py  preproc_base.py  process_stream_raw_to_preproc_app.py  process_stream_raw_to_preproc_dag.py  raw_to_preproc_app.py  raw_to_preproc_stream_dag.py  test_bid_ask_preproc.py  test_candles_preproc.py  test_level2_preproc.py  test_preproc_base.py
processes/stream/staging/htx/: pyproject.toml
processes/stream/staging/htx/src/: bid_ask_staging_htx.py  candles_staging_htx.py  level2_staging_htx.py  process_stream_staging_htx_app.py  process_stream_staging_htx_dag.py  process_stream_staging_htx_metrics.py  staging_htx_base.py  test_bid_ask_staging_htx.py  test_candles_staging_htx.py  test_level2_staging_htx.py  test_staging_base.py
storage-sink-connectors/raw-to-s3-sink/: raw-to-s3-sink.json  values.yaml
(+30 files in other folders)
