[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-bots-farm-common"
version = "0.1.0"
description = "Trade bots farm common tools and libraries"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "apache-airflow",
    "apache-airflow-providers-standard",
    "s3fs",
    "botocore~=1.37",
    "prometheus-client",
]

[dependency-groups]
dev = [
    "apache-airflow",
    "apache-airflow-providers-standard",
    "s3fs",
    "botocore~=1.37",
    "prometheus-client",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"src" = "."
