[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "trade-bots-farm-common"
version = "0.1.0"
description = "Trade bots farm common tools and libraries"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "apache-airflow",
    "apache-airflow-providers-standard",
    "s3fs",
    "botocore~=1.37",
    "prometheus-client",
]

[dependency-groups]
dev = [
    "apache-airflow",
    "apache-airflow-providers-standard",
    "s3fs",
    "botocore~=1.37",
    "prometheus-client",
]

[tool.uv.build-backend]
module-root = "src"
