[project]
name = "trade-bots-farm-process-common"
version = "0.1.0"
description = "Start all streams and do all batch processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytrade2",
    "trade-bots-farm-common",
    "python-dotenv",
    "sortedcontainers",
    "pandas",
    "pyyaml",
    "s3fs",
    "botocore~=1.37",
    "requests",
    "urllib3",
    "numpy",
    "sqlalchemy",
    "prometheus-client",

    ]

