[project]
name = "trade-bots-farm-connector-batch-s3-external"
version = "0.1.0"
description = "Download new data from cloud s3 to on prem minio"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "pyyaml",
    "requests",
    "urllib3",
    "numpy",
    "sqlalchemy",
    "prometheus-client",
    "boto3"
    ]
