[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "trade-bots-farm-connector-stream-alor"
version = "0.1.0"
description = "Alor websocket connector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trade-bots-farm-common",
    "requests",
    "websockets",
    "confluent-kafka",
    "prometheus-client",
]

[tool.uv.sources]
trade-bots-farm-common = { workspace = true }
