[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "trade-bots-farm-process-batch-full"
version = "0.1.0"
description = "Full data load and process"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trade-bots-farm-common",
]

[tool.uv.sources]
trade-bots-farm-common = { workspace = true }
