[project]
name = "trade-bots-farm-process-batch-raw-to-preproc"
version = "0.1.0"
description = "Aggregate raw data from external s3 system by 1min"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"google-re2==0.0.0",  # exclude google providers with their errors
    "pytrade2",
    "trade-bots-farm-common",
    "python-dotenv",
    "sortedcontainers",
    "pandas",
    "s3fs",
    "pyyaml",
    "requests",
    "urllib3",
    "numpy",
    "sqlalchemy",
    "prometheus-client",
    "confluent-kafka"
    ]

