[project]
name = "trade-bots-farm-process-stream-features"
version = "0.1.0"
description = "Streaming features calculation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"google-re2==0.0.0",  # exclude google providers with their errors
    "trade-bots-farm-common",
    "python-dotenv",
    "sortedcontainers",
    "pandas",
    "pyyaml",
    "s3fs",
    "botocore~=1.37",
    "requests",
    "urllib3",
    "numpy",
    "sqlalchemy",
    "prometheus-client",
    "aiokafka"
    ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",  # For async test support
    "pytest-cov",       # Test coverage
    "pytest-mock",      # Better mocking
    "httpx",           # For async HTTP tests (if needed)
    "asynctest"        # Legacy support (if needed)
]
