[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "trade-bots-farm-process-stream-features"
version = "0.1.0"
description = "Streaming features calculation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytrade2",
    "trade-bots-farm-common",
    "python-dotenv",
    "sortedcontainers",
    "pandas",
    "pyyaml",
    "s3fs",
    "botocore~=1.37",
    "requests",
    "urllib3",
    "numpy",
    "sqlalchemy",
    "prometheus-client",
    "aiokafka",
]

[tool.uv.sources]
pytrade2 = { workspace = true }
trade-bots-farm-common = { workspace = true }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "asynctest",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "asynctest",
]