[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "trade-bots-farm-process-batch-staging-alor"
version = "0.1.0"
description = "Transform raw to staging"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytrade2",
    "pyspark==3.5.5",
    "trade-bots-farm-common",
    "python-dotenv",
    "sortedcontainers",
    "pandas",
    "numpy",
    "prometheus-client",
]

[tool.uv.sources]
pytrade2 = { workspace = true }
trade-bots-farm-common = { workspace = true }
