[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "trade-bots-farm-process-batch-staging-s3-external"
version = "0.1.0"
description = "Aggregate raw data from external s3 system by 1min"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytrade2",
    "trade-bots-farm-common",
    "botocore~=1.37",
    "python-dotenv",
    "sortedcontainers",
    "pandas",
    "s3fs",
    "pyyaml",
    "requests",
    "urllib3",
    "numpy",
    "sqlalchemy",
    "prometheus-client",
    "confluent-kafka",
]

[tool.uv.sources]
pytrade2 = { workspace = true }
trade-bots-farm-common = { workspace = true }
