[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "trade-bots-farm-process-stream-htx-staging"
version = "0.1.0"
description = "Aggregate raw htx level2, bid ask, candles and convert to common format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytrade2",
    "trade-bots-farm-common",
    "python-dotenv",
    "sortedcontainers",
    "pandas",
    "pyyaml",
    "s3fs",
    "botocore~=1.37",
    "requests",
    "urllib3",
    "numpy",
    "sqlalchemy",
    "prometheus-client",
    "confluent-kafka",
]

[tool.uv.sources]
pytrade2 = { workspace = true }
trade-bots-farm-common = { workspace = true }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "asynctest",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "asynctest",
]
